--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,122 @@
-.App {
+.head{
+  background: #a0ecff;
+  height: 50vw;
+  
+}
+.logo{
+  top:0px;
+  position: fixed;
+  width: 100vw;
+  background: #a0ecff;
+  height: 65px;
+  border-radius: 0 0 25px 25px;
+
+}
+
+.b{
+  position: fixed;
+  color: skyblue;
+  left: 6vw;
+
+}
+.n{
+  color: lightblue;
+  position: fixed;
+  left: 27vw;
+  top: 24px;
+}
+.body{
+  background: #f6e5fc;
+  height: 200vw;
+  margin-top: -25px;
+border-radius: 30px 30px 0 0;
+}
+.searchdiv{
+  text-align: right;
+}.search{
+  width: 35px;
+  margin-right: 20px;
+  transform: rotate(0deg);
+
+}
+.input{
+  border: 2px solid skyblue;
+  margin-top: 20vw;
+  height: 25px;
+  width: 60vw;
+  border-radius: 100px;
+  background: transparent;
+  outline:none;
+  padding: 8px;
+  transition: 0.30s;
+  text-align: center;
+  box-shadow: 5px 5px 10px #2fd3ff;
+}
+.pencil{
+  width: 10vw;
+  margin-top: 8px;
+  margin-left: 3px;
+}.pendiv{
+  background: #a0ecff;
+  width: 15vw;
+  text-align: center;
+  border-radius: 100px;
+  height: 15vw;
+  position: fixed;
+bottom: 40px;
+right: 30px;
+}
+.note{
+  width: 150px;
+  margin-left: 5vw;
+  margin-top: 10px;
+  background: white;
+  padding: 10px;
+  border-radius: 30px;
+  text-align: center;
+  float: left;
+  height: 30vw;
+  overflow: hidden;
+  padding: 2.5vw;
+}
+.notediv{
+  align-items: center;
+}
+body{
+  background: #f6e5fc;
+}
+.note p{
+  font-size: 15px;
+}
+.note h3{
+  font-size: 15px;
+}
+.note hr{
+  border: 1px solid green;
+  border-radius: 20px;
+}
+.input:hover{
+  border: 2px solid #39e3d4;
+  width: 80vw;
+box-shadow: 10px 10px 8px #2fffda;
+text-align: center;
+}
+.txtnote{
+margin-top: -5px;
+}
+.txttitle{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.txtnote,.txttitle{
+  background: #00ffbf;
+  border: 2px solid #f6e5fc;
+  outline: none;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sub{
+  width: 250px;
+  border: 2px solid #00ff9f;
+  background: #00ff9f;
+  border-radius: 100px;
+  height: 40px;
 }
